--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -6,7 +6,7 @@
 <h2>Task Manager</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form action="#" class="register">
 			<h1>Create Account</h1>
 			<input type="email" placeholder="Email" />
 			<input type="text" placeholder="Имя" />
